--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -1,6 +1,10 @@
-.container{
-    h1{
-        color: lightblue;
-        text-align: center;
+body{
+    .container{
+        // background: url('../img/bg1.jpeg') repeat 100% 100%;
+        height: 100vh;
+        width: 100vw;
+        h1{
+            text-align: center;
+        }
     }
 }
