--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,9 @@
+body #canvas {
+  display: block;
+  background: #fff;
+  position: absolute;
+  z-index: -10;
+}
 body .container {
   height: 100vh;
   width: 100vw;
