--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -1,4 +1,10 @@
 body{
+    #canvas{
+        display:block;
+        background:#fff;
+        position: absolute;
+        z-index: -10;
+    }
     .container{
         // background: url('../img/bg1.jpeg') repeat 100% 100%;
         height: 100vh;
